--- a/src/stylish/boxes.css
+++ b/src/stylish/boxes.css
@@ -1,6 +1,14 @@
 
 .height{
-  height: 35%
+  height: 34%
+}
+
+.red{
+  background-color: rgb(209, 105, 105);
+}
+
+.green {
+  background-color: rgb(102, 204, 174);
 }
 
 
@@ -13,8 +21,8 @@
   transition: 1.8s;
   cursor: pointer;
   background-color: rgb(209, 105, 105);
-  border: 3px solid rgb(131, 51, 51);
-  border:4px solid rgb(67, 113, 124)
+  border:3px solid rgb(65, 105, 138);
+
 }
 
 .eye-box {
@@ -25,9 +33,10 @@
   top: 4%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(209, 105, 105);
+  background-color: rgb(88, 185, 156);
+  border:3px solid rgb(65, 138, 70);
   box-sizing: border-box;
-  border:4px solid rgb(67, 113, 124)
+
 }
 .choirs-box {
   position: absolute;
@@ -37,8 +46,8 @@
   top: 4%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
-  border:4px solid rgb(67, 113, 124)
+
+  border:3px solid rgb(172, 90, 147);
 }
 
 .english-box {
@@ -49,7 +58,7 @@
   top: 4%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
   border:4px solid rgb(67, 113, 124)
 }
 
@@ -60,7 +69,7 @@
   top: 4%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
   border:4px solid rgb(67, 113, 124)
 }
 
@@ -68,10 +77,10 @@
   position: absolute;
   left: 3%;
   width: 16.4%;
-  top: 53%;
+  top: 51%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
   border:4px solid rgb(67, 113, 124)
 }
 
@@ -79,20 +88,20 @@
   position: absolute;
   left: 22.4%;
   width: 16.4%;
-  top: 53%;
+  top: 51%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
   border:4px solid rgb(67, 113, 124)
 }
 .books-box {
   position: absolute;
   left: 41.8%;
   width: 16.4%;
-  top: 53%;
+  top: 51%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
   border:4px solid rgb(67, 113, 124)
 }
 
@@ -100,10 +109,10 @@
   position: absolute;
   left: 61.2%;
   width: 16.4%;
-  top: 53%;
+  top: 51%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
   border:4px solid rgb(67, 113, 124)
 }
 
@@ -111,9 +120,9 @@
   position: absolute;
   left: 80.6%;
   width: 16.4%;
-  top: 53%;
+  top: 51%;
   transition: 1.8s;
   cursor: pointer;
-  background-color: rgb(194, 60, 60);
+
 border:4px solid rgb(67, 113, 124)
 }
