--- a/src/stylish/portfolio.css
+++ b/src/stylish/portfolio.css
@@ -3,5 +3,38 @@ padding: 11px;
 text-align: center;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-weight: bold;
+text-align: center;
+  margin: 0 auto;
 
+}
+
+.project{
+  font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color:rgb(47, 133, 190);
+  font-weight: 700;
+  font-size:4em;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.project-name{
+  line-height: 2.5;
+  font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color:rgb(21, 36, 46);
+  font-weight: 700;
+  font-size:3em;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.blueline{
+
+  margin:10px 0;
+  height:3px;
+   border:none; 
+   color:#000;
+    background-color:rgb(119, 178, 241); 
+    width:95%; 
+    text-align:center; 
+    margin: 0 auto ;
 }
