--- a/src/stylish/primary.css
+++ b/src/stylish/primary.css
@@ -1,6 +1,25 @@
+
 /* * {
   border: 1px solid coral;
 } */
+
+.yellow{
+
+  background-color: rgb(248, 212, 93);
+}
+
+
+body {
+  /* background-color: rgb(247, 210, 88); */
+  background-color: rgb(47, 133, 190);
+  margin: 0px;
+}
+
+path {
+  transition: d 1.8s;
+  will-change: d;
+}
+
 
 .menu{
   overflow: hidden;
@@ -8,32 +27,37 @@
   right: 0;
   left: 0;
   margin-right: auto;
-  width: 500px;
+  width: 100%;
   margin: 0 auto;
   height: 380px;
   box-sizing: border-box;
-  transition: width 0.3s,height 0.3s,opacity 0.3s;
-  
-  background-color: rgb(247, 210, 88);
+  transition: width 0.3s,height 0.3s,opacity 0.3s, z-index 1s;
+  z-index:3;
+
   opacity: 1;
+  border-bottom: 5px solid rgb(47, 158, 80);;
 }
+
 
 .menu.smaller {
   width: 100px;
-  height: 100px;
+  height: 1px;
   opacity:0;
+  z-index:-1
 }
+
 
 .burger{
   height: 100px;
-  width:100px;
+  width:100%;
   position:fixed;
   right: 0;
   left: 0;
   margin: 0 auto;
   margin-right: auto;
-  background-color: rgb(247, 210, 88);
+
 z-index: -1;
+border-bottom: 4px solid rgb(47, 158, 80);
 }
 
 .burger.visible{
@@ -44,7 +68,9 @@ z-index: -1;
   height: 100px;
   width:100%;
   position:fixed;
-  background-color: rgb(247, 210, 88);
+  z-index:-1;
+
+
 
 }
 
@@ -55,9 +81,10 @@ z-index: -1;
    border:none; 
    color:#000;
     background-color:#000; 
-    width:93%; 
+    width:480px; 
     text-align:center;
      margin: 0 auto ;
+     z-index:4;
 }
 
 .line-2 {
@@ -67,9 +94,10 @@ z-index: -1;
    border:none; 
    color:#000;
     background-color:#000; 
-    width:93%; 
+    width:480px; 
     text-align:center;
      margin: 0 auto ;
+     z-index:2;
 }
 
 .bbc {
@@ -84,18 +112,21 @@ position: relative;
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 0px;
+  z-index:3;
 }
 
 .bbc-type-1{
   position: relative; 
   top:5%;
   left:0%;
+  z-index:3;
 }
 
 .bbc-type-2{
   position: relative; 
 top:10%;
 left:0%;
+z-index:3;
 }
 
 #fade path {
@@ -105,15 +136,6 @@ left:0%;
   transition: fill 1s ease;
 }
 
-body {
-  background-color: rgb(247, 210, 88);
-  margin: 0px;
-}
-
-path {
-  transition: d 1.8s;
-  will-change: d;
-}
 
 
 
